--- a/css/components/form.css
+++ b/css/components/form.css
@@ -138,10 +138,14 @@ select:active {
 
 .form-wrapper,
 .form-actions {
-  margin: 0 -2px 10px;
+  margin: 10px -2px 10px;
 }
 
 /* Inline form items. */
+.container-inline div, 
+.container-inline label {
+    display: inline-block;
+}
 .form--inline.clearfix {
   margin: 0 -2px 10px;
   padding: 0;
@@ -180,7 +184,7 @@ td .form-type-select > .form-select {
 }
 td .form-wrapper, 
 td .form-actions {
-  margin: 0;
+  margin: 0 5px;
 }
 .details-wrapper > .form-item {
   margin-right: 0;
@@ -209,6 +213,7 @@ td .form-actions {
   }
   .details-wrapper > .form-item select {
     width: 100%;
+    margin: 0 0 10px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -228,6 +233,7 @@ td .form-actions {
   }
   .details-wrapper > .form-item select {
     width: auto;
+    margin: 0 2px 0;
   }
 }
 
