--- a/css/components/vertical-tabs.css
+++ b/css/components/vertical-tabs.css
@@ -1,4 +1,3 @@
-
 /*
  * @file
  * Override vertical tabs for settings tray.
@@ -111,4 +110,8 @@ strong.vertical-tabs__menu-item-title {
   font-size: 0.85em;
   color: #bbb;
   line-height: inherit;
+}
+[data-vertical-tabs-panes] {
+  background: #444;
+  background-color: #444;
 }
