--- a/css/theme/theme.css
+++ b/css/theme/theme.css
@@ -5,6 +5,7 @@
 
 .page-title {
   display: inline-block;
+  margin-bottom: 10px;
 }
 .breadcrumb {
   line-height: 1.3em
